<resources>
    <string name="app_name" translatable="false">WatchDrip+</string>
    <string name="unit_second">sec</string>
    <string name="unit_minute">min</string>
    <string name="unit_hour">hour</string>
    <string name="unit_day">day"</string>
    <string name="unit_week">week"</string>
    <string name="unit_seconds">sec</string>
    <string name="unit_minutes">min</string>
    <string name="unit_hours">hours</string>
    <string name="unit_days">days"</string>
    <string name="unit_weeks">weeks"</string>
    <string name="unit_short_second">s</string>
    <string name="unit_short_minute">m</string>
    <string name="unit_short_hour">h</string>
    <string name="unit_short_day">d"</string>
    <string name="unit_short_week">w"</string>
    <string name="unit_short_seconds">s</string>
    <string name="unit_short_minutes">m</string>
    <string name="unit_short_hours">h</string>
    <string name="unit_short_days">d"</string>
    <string name="unit_short_weeks">w"</string>
    <string name="title_miband_mac">MAC Address</string>
    <string name="summary_miband_enable">Sync xDrip data with your watch</string>
    <string name="title_miband_enable">Enable service</string>
    <string name="title_miband_screen_battery">Show Battery</string>
    <string name="title_miband_show_date">Show date on the screen</string>
    <string name="title_miband_switch_display_on_wrist">Switch display on wrist</string>
    <string name="summary_miband_goal_notification">Your watch will vibrate when you reach a goal</string>
    <string name="summary_miband_locale_24_hour">Show 24 Hour clock</string>
    <string name="title_miband_category_update_interval_settings">Update Interval Settings</string>
    <string name="title_miband_nightmode_enabled">Enable night mode settings</string>
    <string name="summary_miband_nightmode_enabled">Reduce band screen brightness during custom time</string>
    <string name="title_miband_nightmode_start">Night mode start</string>
    <string name="title_miband_nightmode_end">Night mode end</string>
    <string name="title_miband_interval_in_nightmode">Interval</string>
    <string name="summary_miband_interval_in_nightmode">Defines how often BG would be synchronized in the night mode</string>
    <string name="title_miband_other_settings_category">Other settings</string>
    <string name="title_miband_collect_heartrate">Collect HR</string>
    <string name="summary_miband_collect_heartrate">Would collect heart rate data from band. Update interval can be configured in MiFit or any third-party application</string>
    <string name="title_miband_collect_steps">Collect steps</string>
    <string name="summary_miband_collect_steps">Would collect steps data from band. Update interval can be configured in MiFit or any third-party application</string>
    <string name="title_miband_us_date_format">Date format</string>
    <string name="summary_miband_us_date_format">Watchface date format. US(MM/dd),EU(dd/MM)</string>
    <string name="title_miband_authkey">Auth Key</string>
    <string name="summary_miband_authkey">Set the auth key for MiBand (To get auth key, follow the instructions on https://www.freemyband.com/)</string>
    <string name="summary_miband_mac">Leave empty for auto search</string>
    <string name="title_vibrate_on_readings">Vibrate on readings</string>
    <string name="title_miband_category_device_graph_settings">Device Graph options</string>
    <string name="title_miband_graph_treatment_enable">Show bolus</string>
    <string name="title_miband_graph_hours">Watchface graph hours</string>
    <string name="summary_miband_graph_hours">Set how many hours in graph</string>
    <string name="advanced_rssi_threshold_title">RSSI threshold</string>
    <string name="advanced_rssi_threshold_summary">Defines the RSSI signal strength threshold at which the watchface will be loaded. The larger the value, the worse the signal</string>
    <string name="title_miband_miband_graph_limit">Graph limit</string>
    <string name="summary_miband_graph_limit">Defines the maximum BG value which would be visible on the graph</string>
    <string name="title_miband_update_bg">Update BG manually</string>
    <string name="title_miband_send_alarms_other">Other alarms </string>
    <string name="summary_miband_send_alarms_other">Covers all xDrip alarms, except glucose high/low alarms</string>
    <string name="miband_watchface_istall_success">MiBand watchface has been uploaded successfully!</string>
    <string name="miband_watchface_istall_error">Error while uploading MiBand watchface</string>
    <string name="miband_bg_dialog_title">Update bg data now?</string>
    <string name="miband_alert_snooze_text">Alert %1$s snoozed for %2$d min until %3$s</string>
    <string name="miband_alert_snooze_title_text">Alert snoozed</string>
    <string name="miband_alert_snoozed_remotely_text">Alert snoozed remotely</string>
    <string name="miband_alert_missing_text">Missing alert: </string>
    <string name="miband_alert_missing_title_text">Missing alert</string>
    <string name="miband_search_text">Searching… Please keep the watch near your phone</string>
    <string name="miband_search_found_text">Found %1$s with MAC address: %2$s</string>
    <string name="miband_search_failed_text">Could not find the watch, please try again, or enter MAC address manually</string>
    <string name="miband_success_auth_text">%s was successfully authenticated</string>
    <string name="miband_error_auth_text">Cannot authorize %s, please recheck Auth code</string>
    <string name="miband_wrong_auth_text">Wrong %s authorization key, please recheck a key and try to reconnect again</string>
    <string name="miband_found_auth_text">Found appropriate authorization key for %s</string>
    <string name="miband_auth_fail">Authentication failed due to authentication timeout. When your Band vibrates and blinks, tap it a few times in a row.</string>
    <string name="permission_dialog_start">To ensure all features function properly, these permissions need to be granted: \n\n</string>
    <string name="please_allow_permission">Please allow the following permissions</string>
    <string name="permission_location_info">Location information. Without Location permission Android Bluetooth scan doesn\'t work</string>
    <string name="permissions_background_location_info">Background location information. Android 10 and above need background location for Bluetooth to work.</string>
    <string name="permissions_bt_connect">"Bluetooth connect. Android 12 needs Bluetooth Connect permission to connect to devices."</string>
    <string name="permissions_bt_scan">"Bluetooth scan. Android 12 needs Bluetooth Connect permission to connect to devices."</string>
    <string name="permissions_file_system_read">"Access to photos, media and files on your device. To auto-populate authentication code from freemyband."</string>
    <string name="permissions_file_system">Access to photos, media and files on your device. To be able to read custom watchface.</string>
    <string name="permission_dialog_enable_permissions_in_settings">The permission were permanently disabled. Please go to application system settings and enable permissions</string>
    <string name="location_not_found_title">Location Is Not Enabled</string>
    <string name="location_not_found_message">For Bluetooth discovery to work on newer devices, location must be enabled. xDrip does not track your location except with the optional Emergency Message feature</string>
    <string name="location_yes">Enable</string>
    <string name="short_off_text_for_switches">OFF</string>
    <string name="short_on_text_for_switches">ON</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="nav_menu_scan">Scan</string>
    <string name="confirm_remove_message">Are you sure you want to remove this device?</string>
    <string name="action_settings">Settings</string>
    <string name="send_logs">Submit</string>
    <string name="please_enter_your_question_or_comments_here">Please describe the issue you have encountered.</string>
    <string name="optional_contact_email">Optional contact email</string>
    <string name="action_view_log">Feedback</string>
    <string name="space_minute_ago">" Minute ago"</string>
    <string name="space_minutes_ago">" Minutes ago"</string>
    <string name="action_view_watch_info">Watch info</string>
    <string name="title_send_readings">Send Readings</string>
    <string name="summary_send_alarms">Send notifications to the band for glucose alarms</string>
    <string name="title_send_alarms">Send Alarms</string>
    <string name="summary_disable_hight_mtu">Enabling this option in some cases can fix watchface synchronization error, but significantly slow down watcface uploading speed</string>
    <string name="title_disable_hight_mtu">Disable high MTU values</string>
    <string name="action_scan">Scan devices</string>
    <string name="huami_xdrip_running">Running</string>
    <string name="notification_channel_name">General</string>
    <string name="use_custom_watcface_summary">You should place \'my_watchface.bin\' and \'my_image.png\' (config.json and my_mask.png are optional) files into \'xdrip\' folder on your phone</string>
    <string name="use_custom_watchface_title">Use custom watchface</string>
    <string name="watch_state">Status:\u0020</string>
    <string name="title_activity_about">About</string>
    <string name="about_description">This application is an extension of xDrip, allowing it to communicate with various watches and display glucose levels and alarms directly on the watch. \n
        Special thanks to Nimrod100 for help with testing and implementing support for Xiaomi 8 and 9.\n
Additional thanks to all patrons for supporting this project and making it possible</string>
    <string name="support_project_title">Support the project</string>
    <string name="support_project" translatable="false">https://www.patreon.com/xdrip_miband</string>
    <string name="supported_devices_desc">Supported devices:</string>
    <string name="supported_devices_direct_title">Direct Bluetooth (MiBand / Amazfit)</string>
    <string name="supported_devices_direct" translatable="false">MiBand 2, MiBand 3, MiBand 4, MiBand 5, MiBand 6\nAmazfit GTR 47mm, Amazfit GTR 42mm, Amazfit GTR2, Amazfit GTR2e\nAmazfit GTS2, Amazfit GTS2e, Amazfit GTS2 Mini\nAmazfit Band5, Amazfit Bip, Amazfit Bip Lite, Amazfit Bip S, Amazfit Bip S Lite\nAmazfit T-Rex Pro</string>
    <string name="supported_devices_xiaomi_title">Xiaomi / HyperOS watches</string>
    <string name="supported_devices_xiaomi" translatable="false">Xiaomi 8 Pro, Xiaomi 9, Xiaomi 10, Redmi Watch 4, Redmi Watch 6 \u2014 via the Xiaomi service.\nSetup guide: https://bigdigital.home.blog/2024/11/28/xiaomi-89-support/</string>
    <string name="supported_devices_zepp_title">Zepp OS devices</string>
    <string name="supported_devices_zepp" translatable="false">Many Zepp OS 2+ watches, via the built-in web server and a companion Zepp OS app.\nFull device list and setup: https://watchdrip.org/</string>
    <string name="supported_devices_garmin_title">Garmin (ConnectIQ)</string>
    <string name="supported_devices_garmin" translatable="false">Garmin watches with ConnectIQ support, via the WatchDrip Garmin app.\nFull device list and setup: https://watchdrip.org/garmin/</string>
    <string name="about_version">Version: %s, Build date:\u0020</string>
    <string name="action_view_about">About</string>
    <string name="Advanced">Advanced</string>
    <string name="action_get_statistic">Get statistic</string>
    <string name="xdrip_app_no_response">No response from xDrip App. Please check xDrip settings</string>
    <string name="app_received_data">Received data from %1$s</string>
    <string name="title_activity_watch_store">Watch face store</string>
</resources>