<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"  >
    <item
        android:id="@+id/action_view_scan"
        android:orderInCategory="1"
        android:title="@string/action_scan"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_watch_info"
        android:orderInCategory="2"
        android:title="@string/action_view_watch_info"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wf_store"
        android:orderInCategory="2"
        android:title="@string/title_activity_watch_store"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_statistic"
        android:orderInCategory="3"
        android:title="@string/action_get_statistic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_log"
        android:orderInCategory="4"
        android:title="@string/action_view_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_about"
        android:orderInCategory="5"
        android:title="@string/action_view_about"
        app:showAsAction="never" />
</menu>
